...

  @override
  Widget build(BuildContext context) {
    final localizations = AppLocalizations.of(context)!;

    return Semantics(
      identifier: 'view.llmChat',
      label: 'Page',
      child: Scaffold(
        key: const ValueKey('view.llmChat'),
        drawer: _buildDrawer(),
        appBar: AppBar(
          key: const ValueKey('view.llmChat.appBar'),
...
